# brian2-benchmark

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  format_results.rb  graph-results.py  pyproject.toml  requirements.txt  run.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci-testing.yml
benchmark/: ComplicatedSmall-omp.py  ComplicatedSmall.py  input.ssv  run.sh  se.ssv  volt.ssv
brian2_benchmark/: ComplicatedSmall-omp.py  ComplicatedSmall.py  SimpleLarge-omp.py  SimpleLarge.py  complicated_small.py  complicated_small_omp.py  connections.ssv  ee.ssv  ii.ssv  simple_large.py  simple_large_omp.py
results/: i7-1165G7.txt  m1.txt  m1_max.txt  m2.txt
